Fixed unresolved symbols
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@142266 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/define/ws/src/Makefile
+++ b/LGPL/CommonSoftware/define/ws/src/Makefile
@@ -68,13 +68,16 @@ LIBRARIES_L     =
 # the following is not necessary because the acs make file creates xmlentityStubs library automatically
 # but we leave it here for now to avoid troubles
 xmlentity_OBJECTS           = xmlentityC xmlentityS   
+xmlentity_LIBS := xmlentityStubs
 
 archive_xmlstore_if_OBJECTS = archive_xmlstore_ifC
+archive_xmlstore_if_LIBS := acscomponentStubs xmlentityStubs
 
 # adds the IdentifierRange schema to archive_xmlstore_if.jar to ensure that it can be loaded again when the archive has been erased.
 archive_xmlstore_if_EXTRAS = -C ../idl/IdentifierRange.xsd
 
-
+ArchiveIdentifierErrorStubs_LIBS := acserr
+archive_xmlstore_ifStubs_LIBS := acscomponentStubs xmlentityStubs
 #
 # Jarfiles and their directories
 #
