Fixed unresolved symbols
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@142267 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jcontexmpl/src/Makefile
+++ b/LGPL/CommonSoftware/jcontexmpl/src/Makefile
@@ -52,6 +52,15 @@ USER_IDL =
 
 ACSERRDEF = JContExmplErrTypeTest ErrorSystemExample
 
+JContExmplErrTypeTestStubs_LIBS := acserr
+ErrorSystemExampleStubs_LIBS := acserr
+HelloDemoStubs_LIBS := acscomponentStubs
+XmlComponentStubs_LIBS:= acscomponentStubs JContExmplErrTypeTestStubs xmlentityStubs 
+LampAccessStubs_LIBS := acscomponentStubs
+LampCallbackStubs_LIBS := acscomponentStubs acserr LampAccessStubs
+ErrorSystemComponentStubs_LIBS := ErrorSystemExampleStubs acscomponentStubs
+EventComponentStubs_LIBS := acsexmplFridgeStubs ACSErrTypeCommonStubs acscomponentStubs
+
 #
 # Jarfiles: We must distinguish between component implementation classes and other classes.
 #
