--- a/LGPL/Tools/log4cpp/ws/src/Makefile
+++ b/LGPL/Tools/log4cpp/ws/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.8 2010/08/25 21:33:52 javarias Exp $"
+# "@(#) $Id: Makefile,v 1.1 2010/10/27 15:44:57 htischer Exp $"
 #
 # Makefile of ........
 #
