Overrode AdvancedComponentClient's initAlarmSystem() method to suppress loading of the alarm system libraries. Removed cmwmom.jar and jms.jar from the build.
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@142470 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
+++ b/LGPL/CommonSoftware/acsGUIs/eventGUI/src/project.properties
@@ -5,7 +5,7 @@
 ## 
 ## European Southern Observatory
 ## A. Caproni 12/02/2009
-## $Id: project.properties,v 1.10 2010/10/21 00:21:34 rtobar Exp $
+## $Id: project.properties,v 1.11 2010/10/29 16:48:18 jschwarz Exp $
 ##
 #################################################
 
@@ -39,12 +39,10 @@ acs.jars.required  = acsalarmSchemaBindings.jar \
  cdbDAL.jar \
  cdbErrType.jar \
  cdbjDAL.jar \
- cmwmom.jar \
  jACSUtil.jar \
  JavaContainerError.jar \
  jcont.jar \
  jcontnc.jar \
- jms.jar \
  junit-4.8.2.jar \
  logging_idl.jar \
  maciErrType.jar \
