out files to ws/object/eclipseOut
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@142876 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/acsContainerServices/.classpath
+++ b/LGPL/CommonSoftware/acsContainerServices/.classpath
@@ -11,5 +11,5 @@
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/cdbDAL.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsnc.jar"/>
-	<classpathentry kind="output" path="object/eclipseOut"/>
+	<classpathentry kind="output" path="ws/object/eclipseOut"/>
 </classpath>
