updated .classpath, jbaci project was depending on ACSROOT's jbaci.jar, and was missing logging_idl.jar
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@143119 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/jbaci/.classpath
+++ b/LGPL/CommonSoftware/jbaci/.classpath
@@ -15,7 +15,6 @@
 	<classpathentry kind="var" path="ACSROOT/lib/baci.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsexmplPowerSupply.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/cdbDAL.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/jcont.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/maci.jar" sourcepath="INTROOT/lib/maci.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acscommon.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsexmplBuilding.jar"/>
@@ -27,12 +26,13 @@
 	<classpathentry kind="var" path="JACORB_HOME/lib/jacorb.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsContainerServices.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/acsjlog.jar"/>
-	<classpathentry kind="var" path="ACSROOT/lib/jbaci.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/maciSchemaBindings.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/castor.jar"/>
 	<classpathentry kind="var" path="ACSROOT/lib/enumpropStd.jar"/>
 	<classpathentry kind="lib" path="lib/testSeqTestingComponent.jar"/>
 	<classpathentry kind="lib" path="lib/testjBaciEnumProp.jar"/>
 	<classpathentry kind="lib" path="lib/testPrimTestingComponent.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/jcont.jar"/>
+	<classpathentry kind="var" path="ACSROOT/lib/logging_idl.jar"/>
 	<classpathentry kind="output" path="object"/>
 </classpath>
