*** empty log message ***
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@144466 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/gui/jfree/src/Makefile
+++ b/LGPL/Tools/gui/jfree/src/Makefile
@@ -84,13 +84,13 @@ jfreechart_jar : jcommon_jar
 # Since it is not part of ACS, we better not even compile the jfree classes that need the javax.servlet. packages.
 	@rm -rf jfreechart-$(JFREECHART_VER)/source/org/jfree/chart/servlet
 
-	#make a lib folder under jfreechart-$(JFREECHART_VER) and copy all necessary (like what??) files
+	@#make a lib folder under jfreechart-$(JFREECHART_VER) and copy all necessary files
 	mkdir jfreechart-$(JFREECHART_VER)/lib
 	cp ../lib/jfree-jcommon-$(JCOMMON_VER).jar jfreechart-$(JFREECHART_VER)/lib 
 	mv jfreechart-$(JFREECHART_VER)/lib/jfree-jcommon-$(JCOMMON_VER).jar jfreechart-$(JFREECHART_VER)/lib/jcommon-$(JCOMMON_VER).jar
 
 
-	#patch by Bhola Panta@NAOJ 2010/11/30
+	@#patch by Bhola Panta@NAOJ 2010/11/30
 	patch jfreechart-$(JFREECHART_VER)/ant/build.xml < java_src.patch
 
 	@cd jfreechart-$(JFREECHART_VER)/ant; ant  -Djcommon.jar=../../../lib/jfree-jcommon-$(JCOMMON_VER).jar compile
@@ -107,7 +107,7 @@ jcommon_jar : unpack
 	@echo ". . . building jcommon . . . "
 	@rm -rf jcommon-$(JCOMMON_VER)/lib
 
-	#patch by Bhola Panta@NAOJ 2010/11/30
+	@#patch by Bhola Panta@NAOJ 2010/11/30
 	patch jcommon-$(JCOMMON_VER)/ant/build.xml < java_src_jc.patch
 
 	cd jcommon-$(JCOMMON_VER)/ant; ant -Dbuild.target=$(JDK_VERSION) compile
