"install" script error fixed
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@144843 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/gui/jchart2d/src/Makefile
+++ b/LGPL/Tools/gui/jchart2d/src/Makefile
@@ -64,7 +64,7 @@ man   : do_man
 	@echo " . . . man page(s) done"
 
 install :
-	@cp ../lib/jfree-JCHART2D-$(JCHART2D_VER).jar $(INSTALL_ROOT)/lib
+	@cp ../lib/jchart2d-$(JCHART2D_VER).jar $(INSTALL_ROOT)/lib
 	@echo " . . . installation done"
 	
 # unpack target:
