comment edited (deleted), ant calling method changed
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@144846 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/Tools/gui/jfree/src/Makefile
+++ b/LGPL/Tools/gui/jfree/src/Makefile
@@ -76,15 +76,15 @@ unpacked:
 # build the jfreechart jar file
 jfreechart_jar : jcommon_jar
 	@echo ". . . building jfreechart . . . "
-# Don't use any of the jar files from inside the downloaded tar.gz packages, but instead use the jars
-# that come with ACS, or that we have built already here in this module (jfree-jcommon-$(JCOMMON_VER).jar).
-# To make up for it, when calling ant below, we provide that jar by overriding the ant property "jcommon.jar"
+
 	@rm -rf jfreechart-$(JFREECHART_VER)/lib
 # The servlet.jar file comes with jfreechart (and just got deleted in the lib dir). 
 # Since it is not part of ACS, we better not even compile the jfree classes that need the javax.servlet. packages.
 	@rm -rf jfreechart-$(JFREECHART_VER)/source/org/jfree/chart/servlet
 
 	@#make a lib folder under jfreechart-$(JFREECHART_VER) and copy jfree-jcommon-$(JCOMMON_VER).jar
+	@#jcommonXXX.jar is needed in "${basedir}/lib" for sucessfull compilation 
+
 	mkdir jfreechart-$(JFREECHART_VER)/lib
 	cp ../lib/jfree-jcommon-$(JCOMMON_VER).jar jfreechart-$(JFREECHART_VER)/lib 
 	mv jfreechart-$(JFREECHART_VER)/lib/jfree-jcommon-$(JCOMMON_VER).jar jfreechart-$(JFREECHART_VER)/lib/jcommon-$(JCOMMON_VER).jar
@@ -92,7 +92,7 @@ jfreechart_jar : jcommon_jar
 	@#patch by Bhola Panta@NAOJ 2010/11/30
 	patch jfreechart-$(JFREECHART_VER)/ant/build.xml < java_src.patch
 
-	@cd jfreechart-$(JFREECHART_VER)/ant; ant  -Djcommon.jar=../../../lib/jfree-jcommon-$(JCOMMON_VER).jar compile
+	@cd jfreechart-$(JFREECHART_VER)/ant; ant compile
 	@cp jfreechart-$(JFREECHART_VER)/lib/jfreechart-$(JFREECHART_VER).jar ../lib
 	@echo "done"
 
