Headless build support for the AlarmsProfiler. This support includes: * Makefile and build.xml files * Product and feature definition * alarmsProfiler script to launch the application from the command line
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@144970 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/ACSLaser/AlarmsProfiler/plugin.xml
+++ b/LGPL/CommonSoftware/ACSLaser/AlarmsProfiler/plugin.xml
@@ -173,7 +173,7 @@
                label="File">
             <command
                   commandId="alma.acs.alarmsanalyzer.command.connectacs"
-                  label="Conenct to ACS"
+                  label="Connect to ACS"
                   style="push"
                   tooltip="Connect to ACS">
             </command>
@@ -219,6 +219,10 @@
          <property
                name="windowImages"
                value="icons/alt_window_16.gif,icons/alt_window_32.gif">
+         </property>
+         <property
+               name="appName"
+               value="Alarm profiler RCP">
          </property>
       </product>
    </extension>
