Integrate macro for generation of log files at module level and compilation time measurements
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@145003 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/containerTests/Makefile
+++ b/LGPL/CommonSoftware/containerTests/Makefile
@@ -16,7 +16,7 @@
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
 #
-# "@(#) $Id: Makefile,v 1.6 2009/09/11 12:22:25 gchiozzi Exp $"
+# "@(#) $Id: Makefile,v 1.7 2010/12/09 16:35:50 jagonzal Exp $"
 #
 # Makefile of containerTests (the package dealing with container tests)
 #
@@ -31,6 +31,18 @@
 # REMARKS
 #    None
 #------------------------------------------------------------------------
+
+###############################################
+# Macro definitions.                          #
+###############################################
+define makeIt
+   (( /usr/bin/time -f "$1 COMPILATION TIME %E" make $(MAKE_FLAGS) -C $1 $2 2>&1 ) || ( echo "### ==> FAILED $2 ! " | tee -a $3 $4 1>&2 )) | tee -a $3 $4 >/dev/null;
+endef
+
+define makeItAux
+   (( make $(MAKE_FLAGS) -C $1 $2 2>&1 ) || ( echo "### ==> FAILED $2 ! " | tee -a $3 $4 1>&2 )) | tee -a $3 $4 >/dev/null;
+endef
+###############################################
 
 #
 # Modules in the various containerTest sub-packages.
@@ -149,21 +161,21 @@ update:
             fi;\
 	    if [ -f $${member}/src/Makefile ]; then \
 	        $(ECHO) "############ $${member} MAIN" | tee -a build.log;\
-                $(MAKE) $(MAKE_FLAGS) -C $${member}/src/ clean >> build.log 2>& 1;\
-                $(MAKE) $(MAKE_FLAGS) -C $${member}/src/ all >> build.log 2>& 1 || echo "### ==> FAILED all ! " | tee -a build.log; \
-                $(MAKE) $(MAKE_FLAGS) -C $${member}/src/ install >> build.log 2>& 1 || echo "### ==> FAILED install ! " | tee -a build.log; \
+                $(call makeItAux,$${member}/src,clean,build.log,$${member}/src/NORM-BUILD-OUTPUT) \
+                $(call makeIt,$${member}/src,all,build.log,$${member}/src/NORM-BUILD-OUTPUT) \
+                $(call makeItAux,$${member}/src,install,build.log,$${member}/src/NORM-BUILD-OUTPUT) \
 	    elif [ -f $${member}/ws/src/Makefile ]; then \
 		$(ECHO) "############ $${member} WS" | tee -a build.log;\
-                $(MAKE) $(MAKE_FLAGS) -C $${member}/ws/src/ clean >> build.log 2>& 1;\
-                $(MAKE) $(MAKE_FLAGS) -C $${member}/ws/src/ all >> build.log 2>& 1 || echo "### ==> FAILED all ! " | tee -a build.log; \
-                $(MAKE) $(MAKE_FLAGS) -C $${member}/ws/src/ install >> build.log 2>& 1 || echo "### ==> FAILED install ! " | tee -a build.log; \
+                $(call makeItAux,$${member}/ws/src,clean,build.log,$${member}/ws/src/NORM-BUILD-OUTPUT) \
+                $(call makeIt,$${member}/ws/src,all,build.log,$${member}/ws/src/NORM-BUILD-OUTPUT) \
+                $(call makeItAux,$${member}/ws/src,install,build.log,$${member}/ws/src/NORM-BUILD-OUTPUT) \
 	    fi;\
 	    if [ "$(VXWORKS_RTOS)" == "YES" ]; then \
 		if [ -f $${member}/lcu/src/Makefile ]; then \
 		    $(ECHO) "############ $${member} LCU" | tee -a build.log;\
-                    $(MAKE) $(MAKE_FLAGS) -C $${member}/lcu/src/ clean >> build.log 2>& 1;\
-                    $(MAKE) $(MAKE_FLAGS) -C $${member}/lcu/src/ all >> build.log 2>& 1 || echo "### ==> FAILED all ! " | tee -a build.log; \
-                    $(MAKE) $(MAKE_FLAGS) -C $${member}/lcu/src/ install >> build.log 2>& 1 || echo "### ==> FAILED install ! " | tee -a build.log; \
+                    $(call makeItAux,$${member}/lcu/src,clean,build.log,$${member}/lcu/src/NORM-BUILD-OUTPUT) \
+                    $(call makeIt,$${member}/lcu/src,all,build.log,$${member}/lcu/src/NORM-BUILD-OUTPUT) \
+                    $(call makeItAux,$${member}/lcu/src,install,build.log,$${member}/lcu/src/NORM-BUILD-OUTPUT) \
 		fi;\
 	    fi;\
 	done;\
