--- a/LGPL/CommonSoftware/eventGUI/build.properties
+++ b/LGPL/CommonSoftware/eventGUI/build.properties
@@ -3,4 +3,11 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                icons/,\
-               .
+               .,\
+               toc.xml,\
+               tocconcepts.xml,\
+               tocgettingstarted.xml,\
+               tocreference.xml,\
+               toctasks.xml,\
+               html/,\
+               contexts.xml
