Added MonitorDAO interface to monicd module. This interface was obtained from ARCHIVE/TMCDB/DAO, tag mon-refactor-201101
git-svn-id: https://alma-svn.aoc.nrao.edu/p2/trunk/ACS@146743 523d945c-050c-4681-91ec-863ad3bb968a

--- a/LGPL/CommonSoftware/monitoring/monicd/src/Makefile
+++ b/LGPL/CommonSoftware/monitoring/monicd/src/Makefile
@@ -1,7 +1,7 @@
 #*******************************************************************************
 # PPPPPPPP
 #
-# "@(#) $Id: Makefile,v 1.1 2011/01/18 18:07:37 tstaig Exp $"
+# "@(#) $Id: Makefile,v 1.2 2011/01/19 14:10:34 tstaig Exp $"
 #
 # Makefile of ........
 #
@@ -122,8 +122,8 @@ ACSERRDEF= MonitorCollectorErr
 #
 # Jarfiles and their directories
 #
-JARFILES= 
-jjj_DIRS=
+JARFILES=MonitoringDAO 
+jjj_DIRS=alma/acs/monitoring/DAO
 jjj_EXTRAS= 
 #
 # java sources in Jarfile on/off
